src/objects/CMS_Page_Article__c.object
<CustomObject>
    <description>isll
object contain page name and lookup to Article.</description>
    <fields>
        <fullName>CMS_Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMS Article</label>
        <referenceTo>CMS_Article__c</referenceTo>
        <relationshipLabel>CMS Page Articles</relationshipLabel>
        <relationshipName>CMS_Page_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CMS Page Article</label>
    <nameField>
        <displayFormat>CPAN-{0000000}</displayFormat>
        <label>CMS Page Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMS Page Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>